# NaC

./: .gitignore  .gitleaks.toml  AGENTS.md  AUTHORS.md  CITATION.cff  HERAUSGEBER.md  NOTICE  README.md  TRADEMARK.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
LICENSES/: README.md
bpmn/: README.md  bookkeeping-process.bpmn  immobilienkaufvertrag.bpmn  invoice-process.bpmn  nac-bpmn-profile.md  nac-moddle.json  onboarding-entry.bpmn
knowledge-graph/: README.md  notarial-next10.graph.json  notarial-next10.md  notarial-top10.graph.json  notarial-top10.md
logs/: test-log.jsonl
plugins/: GANTT.md  README.md
policies/: culture-policy.yaml  language-policy.yaml  license-policy.yaml  onboarding-diagrams.json  onboarding-flow.json  process-policy.yaml  provider-open-services-policy.yaml  sbom-policy.yaml  startup-requirements.yaml  technology-policy.yaml  tenant-ownership-policy.yaml
qms/: README.md  audit-program.md  iso9001-mapping.md  management-review.md  nonconformities.schema.json  process-map.md  quality-objectives.json  quality-policy.md  roles-raci.json
roadmap/: BUILD_NOW.md  GANTT.md
schemas/: kg-editor-patch.schema.json
scripts/: generate_usecase_bpmn.py  install_local_plugins.py  nac.py  nac_hw_bridge.py  nac_web.py  notary_kg.py  quality_gate.py  render_quality_gate_comment.py  startup_check.py  validate_ai_sbom.py  validate_bpmn_models.py  validate_cloud_runbook_parity.py  validate_doc_links.py  validate_gantt_progress.py  validate_governance_sync.py  validate_kg_editor.py  validate_knowledge_graph.py  (+2 more)
(+475 files in other folders)
