[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nac"
version = "0.1.0"
description = "Notariat as Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
business-os = "business_os.cli:main"
nac = "nac_cli.cli:main"
nac-web = "nac_web.cli:main"
notary-kg = "notary_kg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
